tests/baselines/reference/paramTagNestedWithoutTopLevelObject2.errors.txt
paramTagNestedWithoutTopLevelObject2.js(2,20): error TS8032: Qualified name 'xyz.bar' is not allowed without a leading '@param {object} xyz'.


==== paramTagNestedWithoutTopLevelObject2.js (1 errors) ====
    /**
     * @param {object} xyz.bar
                       ~~~~~~~
!!! error TS8032: Qualified name 'xyz.bar' is not allowed without a leading '@param {object} xyz'.
     * @param {number} xyz.bar.p
     */
    function g(xyz) {
        return xyz.bar.p;
    }